🐛 Fixed word-wrap for extra long anchor links text (#478)
refs #466

Anchor links didn't break, when the text was too long. Using `word-break: break-all` specifically on a-tags in post-content fixes this without screwing up other tags and their breaks.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -815,6 +815,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-content a {
     color: #000;
+    word-break: break-word;
     box-shadow: var(--blue) 0 -1px 0 inset;
 }
 
